update stuff for vercel

--- a/getStarted.html
+++ b/getStarted.html
@@ -40,10 +40,10 @@
   <nav class="fixed top-0 left-0 w-full z-50 backdrop-blur-md bg-black/90 border-b border-gray-800 shadow-md px-8 py-4 flex justify-between items-center text-lg font-semibold">
     <div class="text-white">NAVI</div>
     <div class="space-x-8">
-      <a href="/" class="text-white hover:text-gray-400 transition">How It Works</a>
-      <a href="/our-goal" class="text-white hover:text-gray-400 transition">Our Goal</a>
-      <a href="/get-started" class="text-white hover:text-gray-400 transition">Get Started</a>
-      <a href="/demo" class="text-white hover:text-gray-400 transition">Demo</a>
+      <a href="index.html" class="text-white hover:text-gray-400 transition">How It Works</a>
+      <a href="ourGoal.html" class="text-white hover:text-gray-400 transition">Our Goal</a>
+      <a href="getStarted.html" class="text-white hover:text-gray-400 transition">Get Started</a>
+      <a href="demo.html" class="text-white hover:text-gray-400 transition">Demo</a>
     </div>
   </nav>
 
