--- a/ourGoal.html
+++ b/ourGoal.html
@@ -38,21 +38,23 @@
         >
             <div class="text-white">NAVI</div>
             <div class="space-x-8">
-                <a href="/" class="text-white hover:text-[#9c9c9c] transition"
+                <a
+                    href="index.html"
+                    class="text-white hover:text-[#9c9c9c] transition"
                     >How It Works</a
                 >
                 <a
-                    href="/our-goal"
+                    href="ourGoal.html"
                     class="text-white hover:text-[#9c9c9c] transition"
                     >Our Goal</a
                 >
                 <a
-                    href="/get-started"
+                    href="getStarted.html"
                     class="text-white hover:text-[#9c9c9c] transition"
                     >Get Started</a
                 >
                 <a
-                    href="/demo"
+                    href="demo.html"
                     class="text-white hover:text-gray-400 transition"
                     >Demo</a
                 >
