--- a/index.html
+++ b/index.html
@@ -45,21 +45,23 @@
         >
             <div class="text-white">NAVI</div>
             <div class="space-x-8">
-                <a href="/" class="text-white hover:text-gray-400 transition"
+                <a
+                    href="index.html"
+                    class="text-white hover:text-gray-400 transition"
                     >How It Works</a
                 >
                 <a
-                    href="/our-goal"
+                    href="ourGoal.html"
                     class="text-white hover:text-gray-400 transition"
                     >Our Goal</a
                 >
                 <a
-                    href="/get-started"
+                    href="getStarted.html"
                     class="text-white hover:text-gray-400 transition"
                     >Get Started</a
                 >
                 <a
-                    href="/demo"
+                    href="demo.html"
                     class="text-white hover:text-gray-400 transition"
                     >Demo</a
                 >
@@ -194,7 +196,7 @@
                     control? Click 'Get Started' to begin your journey with
                     NAVI!
                 </div>
-                <a href="/get-started">
+                <a href="getStarted.html">
                     <button
                         class="mt-4 bg-[#4f4d4d] text-white px-6 py-3 rounded-full hover:bg-[#828282] transition"
                     >
