change wording on the site

--- a/getStarted.html
+++ b/getStarted.html
@@ -60,7 +60,7 @@
             <!-- Text and Button on the right -->
             <div class="text-white text-left max-w-xl">
             <p class="text-lg mb-6">
-                Please download the following two files:
+                Download and extract the .zip file to get started:
             </p>
             <a href="static/navi-download.zip" download="static/navi-download.zip" class="bg-[#4f4d4d] text-white px-6 py-3 rounded-full hover:bg-[#828282] transition inline-block text-center">
               DOWNLOAD PROGRAM AND REQUIREMENTS
